<?xml version="1.0"?>
<package format="2">
  <name>behavior_tree_ros</name>
  <version>0.1.0</version>
  <description>The behavior_tree_ros metapackage</description>

  <maintainer email="renan028@gmail.com">rsf</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bt_ros</exec_depend>
  <exec_depend>bt_ros_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
