<?xml version="1.0"?>
<package format="2">
  <name>bt_ros</name>
  <version>0.1.0</version>
  <description>The bt_ros package</description>

  <maintainer email="renan028@gmail.com">rsf</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rosfmt</depend>
  <depend>bt_ros_msgs</depend>
  <depend>xmlrpcpp</depend>

  <test_depend>rostest</test_depend>
</package>
