<?xml version="1.0"?>
<package format="2">
  <name>bt_ros_msgs</name>
  <version>0.1.0</version>
  <description>The behavior_tree_ros_msgs package</description>

  <maintainer email="renan028@gmail.com">renan</maintainer>
  <author email="renan028@gmail.com">renan</author>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
